# Rtype

./: .clang-format  .gitignore  CMakeLists.txt  Linux  Makefile  README.md  clean.sh  client.sh  conanfile.txt  doxyfile  enemies.conf  make  menu  server.sh  tags  windows.bat
.github/workflows/: blank.yml  linter.yml
doc/: RFC_0418.txt
doc/html/: AComponent_8hpp_source.html  ASystem_8hpp_source.html  Button_8hpp_source.html  ClientError_8hpp_source.html  Client_8hpp_source.html  Common_8hpp_source.html  Config_8hpp_source.html  DrawSystem_8hpp_source.html  Drawable_8hpp_source.html  Ennemy_8hpp_source.html  Entity_8hpp_source.html  Error_8hpp_source.html  Errors_8hpp_source.html  Event_8hpp_source.html  Factory_8hpp_source.html  FileError_8hpp_source.html  GameLobby_8hpp_source.html  HealthSystem_8hpp_source.html  HitboxSystem_8hpp_source.html  Hitbox_8hpp_source.html  IComponent_8hpp_source.html  ISystem_8hpp_source.html  Image_8hpp_source.html  InGame_8hpp_source.html  Menu_8hpp_source.html  Movable_8hpp_source.html  Music_8hpp_source.html  Paralax_8hpp_source.html  Pause_8hpp_source.html  Player_8hpp_source.html  Position_8hpp_source.html  Repeatable_8hpp_source.html  Scale_8hpp_source.html  ServerError_8hpp_source.html  Server_8hpp_source.html  Shoot_8hpp_source.html  TextBox_8hpp_source.html  Text_8hpp_source.html  Uuid_8hpp_source.html  Velocity_8hpp_source.html  (+138 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_0.js  functions_1.js  (+16 more)
doc/latex/: annotated.tex  classAComponent.eps  classAComponent.tex  classASystem.eps  classASystem.tex  classButton.tex  classClient.tex  classClientError.eps  classClientError.tex  classDrawSystem.eps  classDrawSystem.tex  classDrawable.eps  classDrawable.tex  classEntity.tex  classError.eps  classError.tex  classFactory.tex  classFileError.eps  classFileError.tex  classGameLobby.tex  classGame_1_1Ennemy.tex  classGame_1_1Event.tex  classGame_1_1Health.tex  classGame_1_1Image.tex  classGame_1_1Music.tex  classGame_1_1Paralax.tex  classGame_1_1Player.tex  classGame_1_1Shoot.tex  classGame_1_1Text.tex  classGame_1_1Windows.tex  classHealth.eps  classHealth.tex  classHealthSystem.eps  classHealthSystem.tex  classHitbox.eps  classHitbox.tex  classHitboxSystem.eps  classHitboxSystem.tex  classIComponent.eps  classIComponent.tex  (+40 more)
src/: Common.hpp  Errors.hpp  README.md  doc.txt
src/Error/: ClientError.hpp  Error.hpp  ServerError.hpp
src/Error/ClientErrors/: WindowCreationError.hpp
src/Error/ServerErrors/: FileError.hpp
src/client/: Button.cpp  Button.hpp  Client.cpp  Client.hpp  Common.hpp  Config.cpp  Config.hpp  Ennemy.hpp  Event.cpp  Health.cpp  Health.hpp  Image.cpp  Image.hpp  Music.cpp  Music.hpp  Paralax.cpp  Paralax.hpp  Player.cpp  Player.hpp  README.md  Shoot.hpp  Text.cpp  Text.hpp  Windows.cpp  Windows.hpp  client  main.cpp
src/client/game/: Client.cpp  Client.hpp  Ennemy.cpp  Ennemy.hpp  Event.cpp  Event.hpp  Health.cpp  Health.hpp  InGame.cpp  InGame.hpp  Player.cpp  Player.hpp  Shoot.cpp  Shoot.hpp
src/client/menu/: Display.cpp  Events.cpp  GameLobby.cpp  GameLobby.hpp  Initialisations.cpp  Menu.cpp  Menu.hpp
src/client/pause/: Pause.cpp  Pause.hpp
src/client/utils/: Button.cpp  Button.hpp  Config.cpp  Config.hpp  Image.cpp  Image.hpp  Music.hpp  Paralax.cpp  Paralax.hpp  Sound.cpp  Sound.hpp  Text.cpp  Text.hpp  TextBox.hpp
src/server/: Common.hpp  Server.cpp  Server.hpp  compile.sh  main.cpp  main_test_ecs.cpp  udp_server.cpp
src/server/ecs/: AComponent.hpp  ASystem.hpp  Entity.hpp  Factory.hpp  IComponent.hpp  ISystem.hpp  README.md  constants.hpp  entities.conf
src/server/ecs/Components/: Drawable.hpp  Health.hpp  Hitbox.hpp  Movable.hpp  Position.hpp  Repeatable.hpp  Scale.hpp  Sound.hpp  Uuid.hpp  Velocity.hpp
src/server/ecs/Systems/: Draw.hpp  DrawSystem.hpp  Health.hpp  HealthSystem.hpp  HitboxSystem.hpp
src/server/testClient/: client  main.cpp
src/test/: client  server  tcp_client.cpp  tcp_server.cpp
test/: Dockerfile
